[gd_scene load_steps=8 format=2]

[ext_resource path="res://GameFrontHUDRelated/Subs/RewindPanel/Assets/RewindPanel_SecondsPanel.png" type="Texture" id=1]
[ext_resource path="res://GameFrontHUDRelated/Subs/RewindPanel/RewindPanel.gd" type="Script" id=2]
[ext_resource path="res://GameFrontHUDRelated/Subs/RewindPanel/Assets/RewindPanel_MainBackground_EdgeAndBar.png" type="Texture" id=3]
[ext_resource path="res://GameFrontHUDRelated/Subs/RewindPanel/Assets/RewindPanel_ArrowPointer.png" type="Texture" id=4]
[ext_resource path="res://MiscRelated/ShadersRelated/Shader_4CornerGradient.tres" type="Shader" id=5]
[ext_resource path="res://GameFrontHUDRelated/Subs/RewindPanel/Assets/RewindPanel_MainBackground_Fill.png" type="Texture" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/topleft = Color( 0, 0, 0.00392157, 1 )
shader_param/topright = null
shader_param/bottomleft = Color( 0, 0, 0, 1 )
shader_param/bottomright = Color( 0, 0, 0, 1 )

[node name="RewindPanel" type="MarginContainer"]
margin_right = 316.0
margin_bottom = 36.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 332.0
margin_bottom = 58.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_left = 136.0
margin_right = 196.0
margin_bottom = 22.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/margin_top = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer2"]
margin_right = 60.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer2"]
margin_right = 60.0
margin_bottom = 22.0
mouse_filter = 2
custom_constants/margin_top = 3

[node name="TimeLabel" type="Label" parent="VBoxContainer/MarginContainer2/MarginContainer"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "18:00"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 332.0
margin_bottom = 58.0
mouse_filter = 2

[node name="GradientFill" type="TextureRect" parent="VBoxContainer/MarginContainer"]
material = SubResource( 1 )
margin_left = 4.0
margin_top = 4.0
margin_right = 328.0
margin_bottom = 32.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 6 )

[node name="BackgroundEdgeAndMid" type="TextureRect" parent="VBoxContainer/MarginContainer"]
margin_right = 332.0
margin_bottom = 36.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer"]
margin_right = 332.0
margin_bottom = 36.0
mouse_filter = 2

[node name="StripContainer" type="Control" parent="VBoxContainer/MarginContainer/Control"]
margin_right = 277.0
margin_bottom = 36.0

[node name="MarkerContainer" type="Control" parent="VBoxContainer/MarginContainer/Control"]
margin_right = 10.0
margin_bottom = 10.0
mouse_filter = 2

[node name="MarkerPointer" type="TextureRect" parent="VBoxContainer/MarginContainer/Control"]
margin_left = 311.0
margin_top = 23.0
margin_right = 320.0
margin_bottom = 32.0
rect_rotation = 0.580563
mouse_filter = 2
texture = ExtResource( 4 )
